@@ -1,28 +1,23 @@
 package EPrints::Plugin::Export::ContextObject::Journal;
 
-use Unicode::String qw( utf8 );
+use EPrints::Plugin::Export::ContextObject;
 
-use EPrints::Plugin::Export;
-
-@ISA = ( "EPrints::Plugin::Export" );
+@ISA = ( "EPrints::Plugin::Export::ContextObject" );
 
 use strict;
-
-# The utf8() method is called to ensure that
-# any broken characters are removed. There should
-# not be any broken characters, but better to be
-# sure.
 
 # map eprint type to genre
 
 our %MAPPING = qw(
 	title	atitle
 	volume	volume
-	number	number
+	number	issue
 	series	series
 	publication	title
 	pagerange	pages
 	date	date
+	issn	issn
+	isbn	isbn
 );
 our %TYPE_MAPPING = qw(
 	article	article
@@ -38,88 +33,66 @@ sub new
 
 	$self->{name} = "OpenURL Journal";
 	$self->{accept} = [ 'dataobj/eprint' ];
-	$self->{visible} = "all";
-	$self->{suffix} = ".xml";
-	$self->{mimetype} = "text/xml";
+	$self->{visible} = "";
 
 	return $self;
 }
 
-
-
-
-
-sub output_dataobj
+sub convert_dataobj
 {
 	my( $plugin, $dataobj, %opts ) = @_;
 
-	my $itemtype = $dataobj->get_dataset->confid;
+	my $data = $plugin->SUPER::convert_dataobj( $dataobj, %opts );
 
-	my $xml = $plugin->xml_dataobj( $dataobj, %opts );
+	my $dataset = $dataobj->get_dataset;
 
-	return EPrints::XML::to_string( $xml );
+	if( $dataset->has_field( "type" ) and $dataobj->is_set( "type" ) )
+	{
+		my $genre = $TYPE_MAPPING{$dataobj->get_value( "type" )};
+
+		if( defined $genre )
+		{
+			push @$data, [ genre => $genre ];
+		}
+	}
+
+	return $data;
 }
 
 sub xml_dataobj
 {
 	my( $plugin, $dataobj, %opts ) = @_;
 
-	my $session = $plugin->{ "session" };
-	my $repository = $session->get_repository;
-
-	my $jnl = $session->make_element(
-		"jnl:journal",
-		"xmlns:jnl" => "info:ofi/fmt:xml:xsd:journal",
-		"xmlns:xsi" => "http://www.w3.org/2001/XML",
-		"xsi:schemaLocation" => "info:ofi/fmt:xml:xsd:journal http://www.openurl.info/registry/docs/info:ofi/fmt:xml:xsd:journal",
+	return $plugin->xml_entity_dataobj( $dataobj, %opts,
+		mapping => \%MAPPING,
+		prefix => "jnl",
+		namespace => "info:ofi/fmt:xml:xsd:journal",
+		schemaLocation => "info:ofi/fmt:xml:xsd:journal http://www.openurl.info/registry/docs/info:ofi/fmt:xml:xsd:journal",
 	);
+}
 
-	if( $dataobj->is_set( "type" ) )
+sub kev_dataobj
+{
+	my( $plugin, $dataobj, $ctx ) = @_;
+
+	my $data = $plugin->convert_dataobj( $dataobj, mapping => \%MAPPING );
+
+	# Can only include the first author in KEV
+	my $first_author;
+	for(my $i = 0; $i < @$data; ++$i)
 	{
-		my $genre = $TYPE_MAPPING{$dataobj->get_value( "type" )};
-
-		if( defined $genre )
+		if( $data->[$i]->[0] eq "author" )
 		{
-			$jnl->appendChild(
-				$session->make_element( "jnl:genre" )
-			)->appendChild(
-				$session->make_text( $genre )
-			);
+			my $e = splice @$data, $i, 1;
+			--$i;
+			$first_author ||= $e->[1];
 		}
 	}
-	
-	if( $dataobj->is_set( "creators" ) )
-	{
-		my $auths = $session->make_element( "jnl:authors" );
-		$jnl->appendChild( $auths );
+	$first_author ||= {};
+	# Sorry, this is a very compact way of expanding out the sub-arrays
+	@$data = (%$first_author, map { @$_ } @$data);
 
-		foreach my $author ( @{$dataobj->get_value( "creators_name" )} )
-		{
-			my $auth = $auths->appendChild( $session->make_element( "jnl:author" ) );
-			
-			$auth->appendChild(
-				$session->make_element( "jnl:aulast" )
-			)->appendChild(
-				$session->make_text( $author->{ "family" } )
-			);
-
-			$auth->appendChild(
-				$session->make_element( "jnl:aufirst" )
-			)->appendChild(
-				$session->make_text( $author->{ "given" } )
-			);
-		}
-	}
-	
-	while( my( $from, $to ) = each %MAPPING )
-	{
-		next unless $dataobj->is_set( $from );
-		my $node = $session->make_element( "jnl:$to" );
-		$jnl->appendChild( $node );
-		$node->appendChild( $session->make_text( $dataobj->get_value( $from )));
-	}
-
-	return $jnl;
+	$ctx->journal( @$data );
 }
 
 1;
